@@ -11,9 +11,7 @@ import com.github.stefvanschie.inventoryframework.pane.util.Slot;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
-import org.bukkit.inventory.meta.ItemMeta;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class FishingRodInventory {
@@ -22,6 +20,9 @@ public class FishingRodInventory {
 
         StaticPane pane = new StaticPane(0, 0, 9, 5);
 
+        GuiItem enchant1 = new GuiItem(specialist(player), event -> {
+            event.setCancelled(true);
+        });
         GuiItem enchant2 = new GuiItem(experienced(player), event -> {
             event.setCancelled(true);
         });
@@ -32,16 +33,15 @@ public class FishingRodInventory {
             event.setCancelled(true);
         });
         GuiItem goSkinInv = new GuiItem(goSkinInv(), event -> {
-           event.setCancelled(true);
+            event.setCancelled(true);
             MaterialsInventory.materialsMenu(player);
         });
 
-
+        pane.addItem(enchant1, Slot.fromIndex(11));
         pane.addItem(enchant2, Slot.fromIndex(13));
         pane.addItem(enchant3, Slot.fromIndex(15));
         pane.addItem(explanation, Slot.fromIndex(30));
         pane.addItem(goSkinInv, Slot.fromIndex(32));
-
 
         gui.addPane(pane);
 
@@ -49,17 +49,12 @@ public class FishingRodInventory {
     }
 
     public static ItemStack explanation() {
-        ItemStack back = new ItemStack(Material.GREEN_DYE);
-        ItemMeta meta = back.getItemMeta();
-        meta.setDisplayName("§aEncantamentos");
-        meta.setLore(Arrays.asList(
-                "§7Nesse menu estão os encantamentos",
-                "§7que serão melhorados ao coletar lixo."
-        ));
-
-        back.setItemMeta(meta);
-
-        return back;
+        return new ItemBuilder(Material.GREEN_DYE)
+                .setDisplayName("§aEncantamentos")
+                .setLore(List.of(
+                        "§7Nesse menu estão os encantamentos",
+                        "§7que serão melhorados ao coletar lixo."
+                )).build();
     }
 
     public static ItemStack goSkinInv() {
@@ -69,33 +64,31 @@ public class FishingRodInventory {
                         "inventário de skins!")).build();
     }
 
+    public static ItemStack specialist(Player player) {
+        return new ItemBuilder(Material.BOOK)
+                .setDisplayName("§6Especialista §7[§l" + RodsCacheMethod.getInstance().getSpecialist(player) + "§7]")
+                .setLore(List.of(
+                        "§7Esse encantamento duplica",
+                        "§7a experiência e peixes que você ganha",
+                        "§7por 10 segundos ao ser ativado."
+                )).build();
+    }
+
     public static ItemStack lucky(Player player) {
-        ItemStack back = new ItemStack(Material.BOOK);
-        ItemMeta meta = back.getItemMeta();
-        meta.setDisplayName("§6Sortudo §7[§l" + RodsCacheMethod.getInstance().getLucky(player) + "§7]");
-        meta.setLore(Arrays.asList(
-                "§7Esse encantamento adiciona",
-                "§7a chance de pescar mais peixes."
-        ));
-
-        back.setItemMeta(meta);
-
-        return back;
+        return new ItemBuilder(Material.BOOK)
+                .setDisplayName("§6Sortudo §7[§l" + RodsCacheMethod.getInstance().getLucky(player) + "§7]")
+                .setLore(List.of(
+                        "§7Esse encantamento adiciona",
+                        "§7a chance de pescar mais peixes."
+                )).build();
     }
 
     public static ItemStack experienced(Player player) {
-        ItemStack back = new ItemStack(Material.BOOK);
-        ItemMeta meta = back.getItemMeta();
-        meta.setDisplayName("§6Experiente §7[§l" + RodsCacheMethod.getInstance().getExperienced(player) + "§7]");
-        meta.setLore(Arrays.asList(
-                "§7Esse encantamento aumenta",
-                "§7a experiência que você ganha."
-        ));
-
-        back.setItemMeta(meta);
-
-        return back;
+        return new ItemBuilder(Material.BOOK)
+                .setDisplayName("§6Experiente §7[§l" + RodsCacheMethod.getInstance().getExperienced(player) + "§7]")
+                .setLore(List.of(
+                        "§7Esse encantamento aumenta",
+                        "§7a experiência que você ganha."
+                )).build();
     }
-
-
 }
